rollback for theme files

--- a/artifacts/templates/show_artifact_for_user.html
+++ b/artifacts/templates/show_artifact_for_user.html
@@ -275,6 +275,6 @@
         };
         // Initializes and opens PhotoSwipe
         let gallery = new PhotoSwipe(pswpElement, PhotoSwipeUI_Default, items, options);
-        gallery.init();
+{#        gallery.init();#}
     </script>
 {% endblock %}
