--- a/core/static/sass/positioning.scss
+++ b/core/static/sass/positioning.scss
@@ -21,3 +21,24 @@
   padding: 1em 2em;
   margin-left: -16px;
 }
+
+.comment{
+  margin-bottom: 3em;
+}
+
+.comments-title{
+  margin-bottom: 20px;
+}
+
+.new-comment-title{
+  font-size: 20px;
+  margin: 3em 0 1em 0;
+}
+
+.form-group{
+  margin-bottom: 1em;
+}
+
+.submit-button{
+  margin: 1.5em auto 1em;
+}
