--- a/core/static/sass/crafts.scss
+++ b/core/static/sass/crafts.scss
@@ -1,6 +1,10 @@
 .crafts-cnt {
-  background: #3B2724;
-  padding: 12px 16px;
+  background: $brown;
+  padding: 12px 16px 60px 16px;
+}
+
+.crafts-title{
+  font-size: 30px;
 }
 
 .crafts__bg {
@@ -17,6 +21,7 @@
 }
 
 .craft__img {
+  will-change: transform;
   max-width: 70vw;
   transform: translate(-17px, -16px);
   -webkit-box-shadow: 10px 10px 13px 0px rgba(0, 0, 0, 0.29);
