--- a/core/static/sass/description-section.scss
+++ b/core/static/sass/description-section.scss
@@ -10,7 +10,7 @@
 
 .description__details {
   display: inline-block;
-  background: #513533;
+  background: $light-brown;
   max-width: 285px;
   -webkit-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
   -moz-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
@@ -24,7 +24,7 @@
 
 .information__details{
   display: inline-block;
-  background: #513533;
+  background: $light-brown;
   max-width: 285px;
   -webkit-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
   -moz-box-shadow: 0px 0px 15px 9px rgba(0, 0, 0, 0.11);
