--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -31,8 +31,15 @@
 {% endblock %}
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+
+
+<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+<script src="{% static 'js/scrollmagic/uncompressed/plugins/animation.gsap.js' %}"></script>
+<script src="{% static 'js/scrollmagic/uncompressed/plugins/jquery.ScrollMagic.js' %}"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+
+{#<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>#}
 <script src="{% static 'photoswipe/photoswipe.js' %}"></script>
 <script src="{% static 'photoswipe/photoswipe-ui-default.js' %}"></script>
 
