--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -22,7 +22,20 @@
         <li class="grid"><a href="{% url 'artifacts:list_artifacts_users' %}">Artesanatos</a></li>
         <li class="grid"><a href="{% url 'core:about' %}">Sobre</a></li>
     </ul>
-    <div class="menu"></div>
+    <div class="menu-button"></div>
+
+    <div class="menu-wrapper">
+        <div class="menu">
+            <div class="menu__group">
+                <div class="menu__item">Início</div>
+                <div class="menu__item">Artesões</div>
+                <div class="menu__item">Artesanato</div>
+                <div class="menu__item">Sobre</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="menu__bg"></div>
 </header>
 
 
