--- a/core/static/css/appp.css
+++ b/core/static/css/appp.css
@@ -31,6 +31,38 @@ html, body, h1, h2, h3, h4, h5, h6 {
   font-size: 20px;
   font-weight: bold; }
 
+.menu {
+  position: fixed;
+  width: 100%;
+  height: 80vh;
+  background: #600E1C;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
+
+.menu__group {
+  position: relative;
+  z-index: 1000; }
+
+.menu-wrapper:hover .menu:before {
+  transform: scaleY(1); }
+
+.menu__item {
+  font-size: 40px;
+  margin: 1em 0; }
+
+.menu__bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #01A698;
+  height: 100%;
+  width: 100%;
+  z-index: 999; }
+
 .crafts-cnt {
   background: #3B2724;
   padding: 12px 16px 60px 16px; }
